优化批量传输文件功能